# strat9-os

./: .gitignore  .gitlab-ci.yml  .gitmodules  ANALYSIS-boot-timing-benchmark.md  Cargo.toml  Containerfile  DESIGN_MEMORY_V1.md  Makefile  Makefile.builder.toml  Makefile.toml  README.md  SCHED_RUNQUEUE_ANALYSIS.md  THIRD_PARTY_LICENCES.txt  TODO.md  builder-podman.sh  disasm_test.rs  libms.rlib  limine.cfg  limine.conf  patch_fork.py  patch_reply.py  patch_signalset.py  patch_tests.py  publish-doc.sh  rust-toolchain.toml
workspace/bootloader/: .gitignore  .gitlab-ci.yml  Cargo.toml  IMPLEMENTATION_NOTES.md  README.md  build.rs
workspace/bootloader/asm/: Makefile
workspace/bootloader/asm/x86_64/: cpuid.asm  gdt.asm  long_mode.asm  print.asm  protected_mode.asm  stage1.asm  stage2.asm
workspace/bootloader/src/: disk.rs  ext4.rs  lib.rs  main.rs
workspace/bootloader/src/arch/: mod.rs
workspace/bootloader/src/os/: bios.rs  mod.rs  uefi.rs
workspace/components/api/: Cargo.toml
workspace/components/api/src/: lib.rs
workspace/components/netutils/dhcpd/: Cargo.toml  main.rs
workspace/components/netutils/ice-candidate/: Cargo.toml  main.rs
workspace/components/netutils/udp-tool/: Cargo.toml  main.rs
workspace/components/ssh-core/: Cargo.toml
workspace/components/ssh-core/src/: lib.rs
workspace/components/strate-bus/: Cargo.toml
workspace/components/strate-bus/src/: main.rs
workspace/components/strate-console-admin/: Cargo.toml
workspace/components/strate-console-admin/src/: main.rs
workspace/components/strate-fs-abstraction/: Cargo.toml
workspace/components/strate-fs-abstraction/src/: capabilities.rs  error.rs  lib.rs  safe_math.rs  types.rs  unicode.rs  vfs.rs
workspace/components/strate-fs-abstraction/tests/: unit_tests.rs
workspace/components/strate-fs-ext4/: Cargo.toml
workspace/components/strate-fs-ext4/src/: lib.rs  main.rs  syscalls.rs
workspace/components/strate-fs-ramfs/: Cargo.toml
workspace/components/strate-fs-ramfs/src/: lib.rs  main.rs
workspace/components/strate-fs-xfs/: Cargo.toml  README.md
workspace/components/strate-fs-xfs/src/: lib.rs
workspace/components/strate-fs-xfs/xfs-rs/: Cargo.toml
workspace/components/strate-init/: Cargo.toml
workspace/components/strate-init/src/: main.rs
workspace/components/strate-mem-test/: Cargo.toml
workspace/components/strate-mem-test/src/: main.rs  mem_region.rs  mem_region_proc.rs  stressed.rs
workspace/components/strate-net/: Cargo.toml
workspace/components/strate-net/src/: lib.rs  main.rs  syscalls.rs
workspace/components/strate-ram/: Cargo.toml
workspace/components/strate-ram/src/: lib.rs  main.rs
workspace/components/strate-silo-test/: Cargo.toml
workspace/components/strate-silo-test/src/: exec.rs  exec_helper.rs  main.rs  syscalls.rs
workspace/components/strate-sshd/: Cargo.toml
workspace/components/strate-sshd/src/: main.rs
workspace/components/strate-wasm/: Cargo.toml
workspace/components/strate-wasm/src/: main.rs
workspace/components/strate-web-admin/: Cargo.toml
workspace/components/strate-web-admin/assets/: dashboard.html
workspace/components/strate-web-admin/src/: executor.rs  io.rs  main.rs  net.rs  routes.rs  sysinfo.rs
workspace/components/strate-webrtc/: Cargo.toml
workspace/components/strate-webrtc/src/: main.rs
workspace/components/syscall/: Cargo.toml
workspace/components/syscall/src/: data.rs  dirent.rs  error.rs  flag.rs  io.rs  lib.rs  number.rs  schemev2.rs  sigabi.rs
workspace/drivers/bus/: Cargo.toml
workspace/drivers/bus/src/: arm_cci.rs  arm_integrator_lm.rs  brcmstb_gisb.rs  bt1_apb.rs  bt1_axi.rs  da8xx_mstpri.rs  hisi_lpc.rs  imx_aipstz.rs  imx_weim.rs  intel_ixp4xx_eb.rs  lib.rs  mips_cdmm.rs  mmio.rs  moxtet.rs  mvebu_mbus.rs  omap_l3_noc.rs  omap_l3_smx.rs  omap_ocp2scp.rs  probe.rs  qcom_ebi2.rs  qcom_ssc_block_bus.rs  scheme.rs  simple_pm_bus.rs  stm32_etzpc.rs  stm32_firewall.rs  stm32_rifsc.rs  sun50i_de2.rs  sunxi_rsb.rs  tegra_aconnect.rs  tegra_gmi.rs  ti_pwmss.rs  ti_sysc.rs  ts_nbus.rs  uniphier_system_bus.rs  vexpress_config.rs
workspace/drivers/nic/e1000/: Cargo.toml
workspace/kernel/: .rustc_info.json  Cargo.toml  Components.toml  README.md  build.rs  libmetaslot_test.rlib  linker-limine.ld  linker.ld
workspace/kernel/.cargo/: config.toml
workspace/kernel/libs/component/: Cargo.toml
workspace/kernel/libs/component-macro/: Cargo.toml  build.rs
workspace/kernel/src/: audit.rs  boot.S  boot64.S  capability.rs  components.rs  debug.rs  entry.rs  lib.rs  limine_entry.rs  logger.rs  main.rs  panic.rs
workspace/kernel/src/acpi/: bgrt.rs  dmar.rs  fadt.rs  hpet.rs  madt.rs  mcfg.rs  mod.rs  rsdt.rs  sdt.rs  slit.rs  waet.rs
workspace/kernel/src/boot/: assembly.rs  boot.S  boot64.S  entry.rs  limine.rs  logger.rs  mod.rs  panic.rs
workspace/kernel/src/drivers/: mod.rs
workspace/kernel/src/hardware/: mod.rs  pci_client.rs
workspace/kernel/src/ipc/: channel.rs  lifecycle.rs  message.rs  mod.rs  port.rs  reply.rs  semaphore.rs  shared_ring.rs  test.rs
workspace/kernel/src/memory/: address_space.rs  block.rs  block_meta.rs  boot_alloc.rs  buddy.rs  cow.rs  frame.rs  heap.rs  mapping_index.rs  mod.rs  ownership.rs  paging.rs  region_cap.rs  userslice.rs  vmalloc.rs  zone.rs
workspace/kernel/src/namespace/: mod.rs
workspace/kernel/src/ostd/: boot.rs  cpu.rs  mm.rs  mod.rs  task.rs  util.rs
workspace/kernel/src/process/: abi_layout_test.rs  demand_paging_test.rs  elf.rs  errno_test.rs  fork_test.rs  futex_test.rs  mmap_test.rs  mod.rs  pipe_test.rs  posix_signal_test.rs  process.rs  process_id_test.rs  scheduler.rs  scheduler_test.rs  selftest.rs  signal.rs  task.rs  test.rs  time_test.rs  timer.rs  usertest.rs  vfs_ops_test.rs  vfs_stat_test.rs
workspace/kernel/src/shell/: builtins.rs  commands.rs  mod.rs  output.rs  parser.rs  scripting.rs
workspace/kernel/src/silo/: mod.rs
workspace/kernel/src/sync/: fixed_queue.rs  guardian.rs  irq.rs  mod.rs  preempt.rs  spinlock.rs  waitqueue.rs
workspace/kernel/src/syscall/: dispatcher.rs  (+13 more)
workspace/kernel/targets/: x86_64-cascade.json
(+305 files in other folders)
