[workspace]
members = [
    "workspace/abi",
    "workspace/kernel",
    "workspace/bootloader",
    "workspace/drivers/bus",
    "workspace/drivers/nic/net-core",
    "workspace/drivers/nic/nic-buffers",
    "workspace/drivers/nic/nic-queues",
    "workspace/drivers/nic/intel-ethernet",
    "workspace/drivers/nic/e1000",
    "workspace/drivers/nic/driver-net-proto",
    "workspace/components/api",
    "workspace/components/alloc-freelist",
    "workspace/components/strate-fs-abstraction",
    "workspace/components/strate-fs-ext4",
    "workspace/components/syscall",
    "workspace/components/strate-silo-test",
    "workspace/components/strate-mem-test",
    "workspace/components/strate-net",
    "workspace/components/strate-bus",
    "workspace/components/strate-wasm",
    "workspace/components/strate-webrtc",
    "workspace/components/strate-fs-ramfs",
    "workspace/components/strate-init",
    "workspace/components/strate-console-admin",
    "workspace/components/ssh-core",
    "workspace/components/strate-sshd",
    "workspace/components/libssh-strat9",
    "workspace/components/netutils/dhcp-client",
    "workspace/components/netutils/ping",
    "workspace/components/netutils/telnetd",
    "workspace/components/netutils/ice-candidate",
    "workspace/components/netutils/udp-tool",
    "workspace/components/strate-web-admin",
]
exclude = [
    "workspace/components/relibc",        # External dependency, built separately
    "workspace/components/strate-fs-xfs", # Missing fs-abstraction dependency
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Guillaume Gielly <guillaume@gielly.fr>"]
repository = "https://git.strat9-os.org/strat9-os/strat9-os.git"

[workspace.dependencies]
strat9-abi = { path = "workspace/abi" }
spin = "0.10.0"
bitflags = "2.11.0"
log = "0.4"
zerocopy = { version = "0.8.40", features = ["derive"] }

[workspace.lints.rust]
dangling_pointers_from_temporaries = "deny"
irrefutable_let_patterns = "deny"
mismatched_lifetime_syntaxes = "deny"
non_camel_case_types = "allow"
non_snake_case = "allow" # TODO review occuurences
non_upper_case_globals = "allow" # TODO review occuurences
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(target_os, values("strat9"))',
] }
unpredictable_function_pointer_comparisons = "deny"
unsafe_op_in_unsafe_fn = "deny"
unused_imports = "deny"
unused_must_use = "deny"
unused_mut = "deny"
unused_unsafe = "deny"
unused_variables = "allow" # TODO review occurrences (too many for now :D)

[profile.release]
#opt-level = "z"   # Optimize for size
opt-level = 2
#lto = true        # Link-Time Optimization
lto=false
#codegen-units = 1 # Single codegen unit for max LTO
panic = "abort"   # No unwinding in kernel
#strip = true      # Strip debug symbols from release
strip=false
debug=2
incremental = true # Faster recompilation

[profile.dev]
opt-level = 0      # No optimization for faster compilation
debug = 2          # Full debug information (maximum)
strip = false      # Keep all symbols
panic = "abort"    # no_std kernel targets cannot use unwind
incremental = true # Faster recompilation
lto = false        # Faster compilation

[profile.dev-opt]
inherits = "dev"
opt-level = 2      # Better runtime performance while keeping debug symbols
debug = 2          # Keep full symbols for debugging
strip = false      # Keep all symbols
lto = false        # Keep link times reasonable for iterative work
incremental = true # Preserve fast rebuild behavior
