[package]
name = "strat9-kernel"
version = "0.1.0"
edition = "2021"
license = "GPLv3"
authors = ["Guillaume Gielly <guillaume@gielly.fr>"]

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
spin = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }
x86_64 = "0.15"                         # CPU structures, paging, GDT, IDT
uart_16550 = "0.4"                      # Serial port (used in serial.rs)
limine = "0.5.0"                        # Limine boot protocol
component = { path = "libs/component" }

[build-dependencies]
cc = "1.0"
