[package]
name = "strat9-kernel"
version = "0.1.0"
edition = "2021"
license = "GPLv3"
authors = ["Guillaume Gielly <guillaume@gielly.fr>"]

[[bin]]
name = "kernel"
path = "src/main.rs"

[features]
default = []
selftest = []

[dependencies]
spin = { workspace = true }
bitflags = { workspace = true }
log = { workspace = true }
zerocopy = { workspace = true }
num_enum = { version = "0.7", default-features = false }
thiserror = { version = "2", default-features = false }
static_assertions = "1.1"
x86_64 = "0.15"
uart_16550 = "0.4"
limine = "0.5.0"
component = { path = "libs/component" }

[build-dependencies]
cc = "1.0"
