[package]
name = "strat9-components-api"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Guillaume Gielly <guillaume@gielly.fr>"]

[dependencies]
# No kernel dependency — components communicate via IPC, not direct linking.
# The IPC message types are defined in this crate itself.