[package]
name = "strate-fs-abstraction"
description = "Filesystem abstraction layer with safe math, error handling, and Unicode support"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Guillaume Gielly <guillaume@gielly.fr>"]
repository.workspace = true


[dependencies]

[features]
default = []
nightly = []
# Enable alloc for Vec and String support (kernel mode)
alloc = []
# Enable full standard library (user mode / WinFsp)
std = ["alloc"]
