[package]
name = "strate-fs-abstraction"
description = "Filesystem abstraction layer with safe math, error handling, and Unicode support"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Guillaume Gielly <guillaume@gielly.fr>"]
repository.workspace = true


[dependencies]
strat9-syscall = { path = "../syscall", optional = true }
thiserror = { version = "2", default-features = false }

[features]
default = []
nightly = []
# Enable alloc for Vec and String support (kernel mode)
alloc = []
# Enable full standard library (user mode / WinFsp)
std = ["alloc"]
# Enable From<FsError> for strat9_syscall::error::Error
syscall = ["dep:strat9-syscall"]
