[package]
name = "strate-fs-ramfs"
version = "0.1.0"
edition = "2021"
license = "GPLv3"
authors = ["Guillaume Gielly <guillaume@gielly.fr>"]

[dependencies]
strate-fs-abstraction = { path = "../strate-fs-abstraction", features = ["alloc"] }
strat9-syscall = { path = "../syscall" }
spin = "0.10.0"
bitflags = "2.4"
linked_list_allocator = "0.10"

[lib]
path = "src/lib.rs"

[[bin]]
name = "strate-fs-ramfs"
path = "src/main.rs"
