[package]
name = "strate-init"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Guillaume Gielly <guillaume@gielly.fr>"]
description = "Init process for strat9-os. Creates and manages the console-admin silo."

[[bin]]
name = "init"
path = "src/main.rs"

[dependencies]
strat9-syscall = { path = "../syscall", features = ["userspace"] }
