[package]
name = "mem-test"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Guillaume Gielly <guillaume@gielly.fr>"]

[[bin]]
name = "test_mem"
path = "src/main.rs"

[[bin]]
name = "test_mem_stressed"
path = "src/stressed.rs"

[[bin]]
name = "test_mem_region"
path = "src/mem_region.rs"

[dependencies]
strat9-syscall = { path = "../syscall", features = ["userspace"] }
