[package]
name = "strate-ram"
version = "0.1.0"
edition = "2021"

[dependencies]
strate-fs-abstraction = { path = "../strate-fs-abstraction", features = ["alloc"] }
strat9-syscall = { path = "../syscall" }
spin = "0.9"
bitflags = "2.4"
linked_list_allocator = "0.10"

[lib]
path = "src/lib.rs"

[[bin]]
name = "strate-ram"
path = "src/main.rs"
