[package]
name = "silo-test"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Guillaume Gielly <guillaume@gielly.fr>"]

[[bin]]
name = "test_pid"
path = "src/main.rs"

[[bin]]
name = "test_syscalls"
path = "src/syscalls.rs"

[[bin]]
name = "test_exec"
path = "src/exec.rs"

[[bin]]
name = "test_exec_helper"
path = "src/exec_helper.rs"

[dependencies]
strat9-syscall = { path = "../syscall", features = ["userspace"] }
