[package]
name = "strate-wasm"
version = "0.1.0"
edition = "2024"

[dependencies]
# WebAssembly runtime for no_std
wasmi = { version = "0.36", default-features = false, features = ["no-hash-maps"] }

# Modern and fast no_std allocator
talc = { version = "4.4", default-features = false, features = ["allocator"] }

# Strat9 Kernel integration
strat9-syscall = { path = "../syscall", features = ["userspace"] }
spin = "0.9"

[features]
default = []
