[package]
name = "strate-webrtc"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Guillaume Gielly <guillaume@gielly.fr>"]

[[bin]]
name = "strate-webrtc"
path = "src/main.rs"

[dependencies]
strat9-syscall = { path = "../syscall", features = ["userspace"] }
alloc-freelist = { path = "../alloc-freelist" }
