[package]
name = "strat9-syscall"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Guillaume Gielly <guillaume@gielly.fr>"]

[dependencies]
bitflags = "2.4"
zerocopy = { workspace = true }
num_enum = { version = "0.7", default-features = false }
static_assertions = "1.1"
thiserror = { version = "2", default-features = false }

[features]
default = ["userspace"]
userspace = []
# Optional: enables std and impl std::error::Error for Error (no_std by default).
std = []
