[package]
name = "ice-candidate"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Guillaume Gielly <guillaume@gielly.fr>"]
description = "ICE candidate discovery over scheme UDP for strat9-os"

[[bin]]
name = "ice-candidate"
path = "main.rs"

[dependencies]
strat9-syscall = { path = "../../syscall", features = ["userspace"] }
alloc-freelist = { path = "../../alloc-freelist" }
