[package]
name = "udp-tool"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Guillaume Gielly <guillaume@gielly.fr>"]
description = "UDP scheme test utility for strat9-os (/net/udp/*)"

[[bin]]
name = "udp-tool"
path = "main.rs"

[dependencies]
strat9-syscall = { path = "../../syscall", features = ["userspace"] }
alloc-freelist = { path = "../../alloc-freelist" }
