[package]
name = "e1000"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
net-core = { path = "../net-core" }
nic-buffers = { path = "../nic-buffers" }
nic-queues = { path = "../nic-queues" }
intel-ethernet = { path = "../intel-ethernet" }
